--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch",
     "start": "http-server -a localhost -p 8000 -c-1",
-    "postinstall": "http-server -a localhost -p 8000 -c-1"
+    "postinstall": ""
   },
   "keywords": [],
   "author": "",
